<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/reset"
          android:title="@string/reset_label"
          android:icon="@android:drawable/ic_delete"
          android:alphabeticShortcut="@string/reset_shortcut"/>

    <item android:id="@+id/settings"
          android:title="@string/settings_label"
          android:icon="@android:drawable/ic_dialog_info"
          android:alphabeticShortcut="@string/settings_shortcut"/>

    <item android:id="@+id/about"
          android:title="@string/about_label"
          android:icon="@android:drawable/ic_menu_help"
          android:alphabeticShortcut="@string/about_shortcut"/>

    <item android:id="@+id/exit"
          android:title="@string/exit_label"
          android:icon="@android:drawable/ic_lock_power_off"
          android:alphabeticShortcut="@string/exit_shortcut"/>

</menu>
